[#709] Fixed validation rule according to codacy suggestion